# RESEARCH-AGENT-WORKSPACE

./: .gitignore  Plan_Review.md  README.md  RETROSPECTIVE.md  UPGRADE_PLAN.md  citation_live_user_trial.md  deep-research-report.md  extension_management.md  extension_management_review.md  extension_management_user_trial.md  guide.md  plan.md  prob.md
app/: .gitignore  SKILLS_GUIDE.md  pyproject.toml
app/agent/: citation_gate.py  citation_render.py  config.py  fusion.py  graph.py  history.py  ingest.py  mcp.py  memory.py  observability.py  paths.py  plan_log.py  policy_tool_node.py  session.py  state.py  thinking.py  tool_access.py  tool_policy.py  turn_outcome.py  turn_safety.py  turn_store.py
app/agent/cli/: chat.py  citation_command.py  extension_management.py  runtime.py  slash_commands.py
app/agent/extensions/: __init__.py  discovery.py  manager.py  mcp_manifest.py  models.py  paths.py  registry.py  startup.py
app/agent/history_rag/: store.py  tool.py
app/agent/llm/: __init__.py  ollama.py  openrouter.py  text.py  thinking.py
app/agent/skills/: __init__.py  broker.py  capability_map.yaml  manifest_schema.py  metadata.py  runtime.py  validator.py
app/agent/thinking/: __init__.py  parsers.py  prompts.py  review.py  schemas.py  trace.py
app/agent/tools/: __init__.py  bash.py  inventory.py  (+1 more)
app/citation/: README.md  __init__.py  __main__.py  bibtex.py  bibtex_canonical.py  capture.py  cli.py  coordinator.py  crossref.py  discovery.py  doi.py  expansion.py  hub.py  models.py  normalize.py  ranking.py  runtime.py  scholar_fallback.py  storage.py  types.py
app/env/: env-app.yml
app/skills/: __init__.py
app/tests/: citation_fixtures.py  conftest.py  test_academic_skill_tool_policy.py  test_academic_skill_tools.py  test_bash_tool.py  test_chat_cli.py  test_citation_authority.py  test_citation_bibtex_canonical.py  test_citation_cli.py  test_citation_confirmation.py  test_citation_coordinator.py  test_citation_discovery_agent.py  test_citation_doi.py  test_citation_e2e.py  test_citation_expansion.py  test_citation_gate.py  test_citation_hub.py  test_citation_net.py  test_citation_normalize.py  test_citation_provider_crossref.py  test_citation_provider_datacite.py  test_citation_provider_doi_org.py  test_citation_provider_openalex.py  test_citation_provider_query_contract.py  test_citation_provider_routing.py  test_citation_provider_web.py  test_citation_ranking.py  test_citation_ranking_benchmark.py  test_citation_render.py  test_citation_resolution.py  test_citation_runtime.py  test_citation_save_outcomes.py  test_citation_skill_activation.py  test_citation_slash_command.py  test_citation_storage.py  test_citation_types.py  test_citation_venue.py  test_citation_work_resolver.py  test_citation_workflow.py  test_citation_workflow_tool.py  (+41 more)
rag/: .gitignore  README.md  pyproject.toml
rag/docs/: API.md
rag/env/: env-rag.yml
rag/rag/: __init__.py  api.py  collect.py  sync.py
rag/tests/: test_ingest_guards.py  test_json_store.py  test_store_batching.py  test_tools_contract.py
(+80 files in other folders)
